--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yash Gupta | Statistics & Data Science</title>
-    <link rel="stylesheet" href="portfolio-css.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -324,6 +324,6 @@
         </div>
     </footer>
 
-    <script src="portfolio-js.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
