--- a/index.html
+++ b/index.html
@@ -210,6 +210,31 @@
         </div>
     </section>
 
+    <!-- Add after Projects section -->
+    <section id="gallery" class="section">
+      <h2 class="section-title">Image Gallery</h2>
+      <div class="gallery-grid container">
+        <div class="gallery-card">
+          <img src="/images/thumbnails/heatmap.png" 
+               alt="Description 1" 
+               class="gallery-image">
+          <div class="image-caption">Heatmap showcasing all the different offensive formations and average yards gained based on the defensive coverage</div>
+        </div>
+        <div class="gallery-card">
+          <img src="/images/thumbnails/workforce.jpg" 
+               alt="Description 2" 
+               class="gallery-image">
+          <div class="image-caption">Data Visual made for The Daily Texan, showcasing year-over-year growth in workplace employment in the state of Texas</div>
+        </div>
+        <div class="gallery-card">
+         <img src="/images/thumbnails/parking.png" 
+              alt="Description 1" 
+              class="gallery-image">
+         <div class="image-caption">Map displaying annual parking rates for universities in Austin</div>
+        </div>
+      </div>
+    </section>
+    
     <!-- Leadership Section -->
     <section id="leadership" class="leadership">
         <div class="container">
