--- a/index.html
+++ b/index.html
@@ -215,19 +215,19 @@
       <h2 class="section-title">Image Gallery</h2>
       <div class="gallery-grid container">
         <div class="gallery-card">
-          <img src="/images/thumbnails/heatmap.png" 
+          <img src="/images/heatmap.png" 
                alt="Description 1" 
                class="gallery-image">
           <div class="image-caption">Heatmap showcasing all the different offensive formations and average yards gained based on the defensive coverage</div>
         </div>
         <div class="gallery-card">
-          <img src="/images/thumbnails/workforce.jpg" 
+          <img src="/images/workforce.ppg" 
                alt="Description 2" 
                class="gallery-image">
           <div class="image-caption">Data Visual made for The Daily Texan, showcasing year-over-year growth in workplace employment in the state of Texas</div>
         </div>
         <div class="gallery-card">
-         <img src="/images/thumbnails/parking.png" 
+         <img src="/images/parking.png" 
               alt="Description 1" 
               class="gallery-image">
          <div class="image-caption">Map displaying annual parking rates for universities in Austin</div>
