--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <div class="image-caption">Heatmap showcasing all the different offensive formations and average yards gained based on the defensive coverage</div>
         </div>
         <div class="gallery-card">
-          <img src="/images/workforce.ppg" 
+          <img src="/images/workforce.png" 
                alt="Description 2" 
                class="gallery-image">
           <div class="image-caption">Data Visual made for The Daily Texan, showcasing year-over-year growth in workplace employment in the state of Texas</div>
