--- a/index.html
+++ b/index.html
@@ -240,35 +240,35 @@
             <h2 class="section-title">Leadership & Activities</h2>
             <div class="leadership-grid">
                 <div class="leadership-item">
-                    <h3>Data Science Club</h3>
-                    <h4>President</h4>
+                    <h3>The Daily Texan</h3>
+                    <h4>Data Designer</h4>
                     <span class="leadership-date">Spring 2025</span>
                     <ul>
-                        <li>Led a team of 30+ members in organizing data science workshops and hackathons.</li>
-                        <li>Established partnerships with local tech companies for sponsorship and mentorship opportunities.</li>
-                        <li>Increased club membership by 40% through targeted outreach and engaging programming.</li>
+                        <li>Developed data visualizations (graphs, charts, infographics) for Daily Texan stories, enhancing data-driven storytelling</li>
+                        <li>Utilized data visualization tools (Tableau, Datawrapper) to create impactful narratives, forming deeper insights</li>
+                        <li>Applied data analysis and statistical methods to uncover newsworthy trends and patterns for visual representation</li>
                     </ul>
                 </div>
 
                 <div class="leadership-item">
-                    <h3>Undergraduate Research Assistant</h3>
-                    <h4>Department of Statistics</h4>
+                    <h3>The Daily Texan</h3>
+                    <h4>Opinion Columnist</h4>
                     <span class="leadership-date">Fall 2024</span>
                     <ul>
-                        <li>Assisted faculty in research projects focused on statistical modeling and data analysis.</li>
-                        <li>Collaborated with graduate students to design and implement experiments.</li>
-                        <li>Contributed to research papers and presentations for academic conferences.</li>
+                        <li>Wrote thought-provoking opinion pieces on diverse topics such as AI, misinformation, and sports betting</li>
+                        <li>Conducted thorough research and interviews with students and faculty to understand diverse perspectives</li>
+                        <li>Collaborated with editors to refine ideas and improve writing quality before publication, met weekly deadlines for articles</li>
                     </ul>
                 </div>
 
                 <div class="leadership-item">
-                    <h3>Volunteer Data Analyst</h3>
-                    <h4>Local Non-Profit</h4>
+                    <h3>National Honor Society</h3>
+                    <h4>Executive Service Chair</h4>
                     <span class="leadership-date">August 2022 - May 2024</span>
                     <ul>
-                        <li>Provided data analysis support for community development programs.</li>
-                        <li>Developed dashboards to track program impact and outcomes.</li>
-                        <li>Trained staff on basic data collection and analysis techniques.</li>
+                        <li>Directed service opportunities for 400+ members, organizing and overseeing dozens of impactful community service events</li>
+                        <li>Supervised officers by assigning responsibilities and thoroughly evaluating proposals for new service initiatives</li>
+                        <li>Created detailed proposals and collaborated on the planning, execution, and management of chapter-wide service projects</li>
                     </ul>
                 </div>
             </div>
