--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Statistics & Data Science Portfolio</title>
+    <title>Yash Gupta's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="container">
-            <a href="#" class="logo">Portfolio</a>
+            <a href="#" class="logo">YG</a>
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -32,11 +32,10 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Your Name</h1>
+                <h1>Yash Gupta</h1>
                 <span class="txt-type" data-wait="3000" data-words='["Statistics and Data Science Student", "Welch Scholar", "Programmer"]'></span>
                 <p>University of Texas at Austin | 4.0 GPA</p>
-                <p>I'm a Statistics and Data Science student at the University of Texas at Austin with a passion for leveraging data to drive insights and innovation. Currently pursuing a Certificate in Programming and Computation alongside my degree, I combine strong analytical skills with technical expertise to solve complex problems.</p>
-                <p>As a Welch Scholar with a full-ride scholarship, I'm dedicated to academic excellence while gaining hands-on experience through various projects and professional roles.</p>
+                <p>love data, politics, and the New York Giants</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View Projects</a>
                     <a href="#contact" class="btn btn-secondary">Contact Me</a>
@@ -121,80 +120,45 @@
 
     <!-- Experience Section -->
     <section id="experience" class="experience">
-        <div class="container animate-on-scroll">
-            <h2 class="section-title">Experience</h2>
+        <div class="container">
+            <h2 class="section-title">Professional Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Data Science Intern</h3>
-                        <h4>Company Name</h4>
-                        <span class="timeline-date">August 2021 – Present</span>
+                        <h3>ML/Data Engineer</h3>
+                        <h4>JobSense – Texas Luminescence</h4>
+                        <p class="timeline-date">Spring 2025</p>
                         <ul>
-                            <li>Analyzed large datasets to identify patterns and trends, presenting findings to stakeholders.</li>
-                            <li>Developed and implemented machine learning models to predict customer behavior.</li>
-                            <li>Created interactive visualizations to communicate complex data insights.</li>
-                            <li>Collaborated with cross-functional teams to optimize business processes.</li>
+                            <li>Designed an AI-powered web application using NLP to analyze job postings, improving job market trend insights</li>
+                            <li>Implemented time forecasting analysis to predict future skill demands, along with a data dashboard indicating trends</li>
+                            <li>Partnered with cross-functional teams to design dynamic charts that categorized job trends and highlighted hiring patterns</li>
+                            <li>Optimized a linear regression model to accurately map skills to salary ranges, enhancing decision-making for users</li>
                         </ul>
                     </div>
                 </div>
-                <!-- Add more timeline items as needed -->
-            </div>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" class="projects">
-        <div class="container animate-on-scroll">
-            <h2 class="section-title">Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="path/to/project1-image.jpg" alt="NFL Play Analysis Tool">
-                    </div>
-                    <div class="project-content">
-                        <span class="project-type">Kaggle Competition | Fall 2024</span>
-                        <h3>NFL Play Analysis Tool</h3>
-                        <p>Built a robust NFL play analysis tool using R, ggplot2, and tidyverse to uncover actionable insights. Customized interactive visualizations to display coverage distributions and average yards gained by formations. Applied advanced statistical methods and data structures to process and analyze large-scale NFL datasets.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">R</span>
-                            <span class="project-tag">Data Visualization</span>
-                            <span class="project-tag">Statistical Analysis</span>
-                            <span class="project-tag">Sports Analytics</span>
-                        </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Tech Engineer</h3>
+                        <h4>Q&Ace – Texas Convergent</h4>
+                        <p class="timeline-date">Fall 2024</p>
+                        <ul>
+                            <li>Created an interactive, AI-driven interview preparation app to help college students excel in job interviews</li>
+                            <li>Integrated advanced Python libraries (librosa, mediapipe) and cutting-edge LLMs (Perplexity, OpenAI) to enhance app usage</li>
+                            <li>Applied Few-Shot Prompt Engineering to fine-tune AI models and a seamless, responsive JavaScript interface</li>
+                            <li>Awarded "Best Tech" F24 for innovative AI-driven video, audio, and content analysis delivering job-specific feedback</li>
+                        </ul>
                     </div>
                 </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="path/to/project2-image.jpg" alt="Job Market Analysis Tool">
-                    </div>
-                    <div class="project-content">
-                        <span class="project-type">ML/Data Engineering | Spring 2025</span>
-                        <h3>Job Market Analysis Tool</h3>
-                        <p>Developed an AI-powered job market analysis tool that uses NLP to analyze postings and forecast skill demands. Created interactive dashboards and visualizations to help users track job market trends and make informed career decisions based on data-driven insights.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">NLP</span>
-                            <span class="project-tag">Machine Learning</span>
-                            <span class="project-tag">Data Visualization</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="path/to/project3-image.jpg" alt="AI Interview Preparation Platform">
-                    </div>
-                    <div class="project-content">
-                        <span class="project-type">AI Application | Fall 2024</span>
-                        <h3>AI Interview Preparation Platform</h3>
-                        <p>Developed an AI-powered interview preparation platform that analyzes user responses and provides personalized feedback. Integrated cutting-edge language models and media processing libraries to deliver comprehensive interview training experience for college students.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">AI/ML</span>
-                            <span class="project-tag">Web Development</span>
-                            <span class="project-tag">UX Design</span>
-                        </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Online Marketplace Seller</h3>
+                        <h4>Self-Employed</h4>
+                        <p class="timeline-date">August 2021 – Present</p>
+                        <ul>
+                            <li>Developed and implemented scripts using Microsoft Power Automate and JavaScript, generated revenue exceeding $60,000</li>
+                            <li>Leveraged data-driven insights from social media platforms to identify trending products and market demands</li>
+                            <li>Conducted comprehensive market analysis of online reseller platforms to track customer behavior</li>
+                        </ul>
                     </div>
                 </div>
             </div>
