--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Yash Gupta</h1>
-                <span class="txt-type" data-wait="3000" data-words='["Statistics and Data Science Student", "Welch Scholar", "Programmer"]'></span>
+                <span class="txt-type" data-wait="3000" data-words='["Data Scientist", "Programmer", "Journalist"]'></span>
                 <p>University of Texas at Austin | 4.0 GPA</p>
                 <p>love data, politics, and the New York Giants</p>
                 <div class="hero-buttons">
