--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+                <p>&copy; 2025 Yash Gupta. All Rights Reserved.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-linkedin"></i></a>
                     <a href="#"><i class="fab fa-github"></i></a>
