--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
             <div class="hero-content">
                 <h1>Yash Gupta</h1>
                 <span class="txt-type" data-wait="3000" data-words='["Data Scientist", "Programmer", "Journalist"]'></span>
-                <p>University of Texas at Austin | 4.0 GPA</p>
+                <p>University of Texas at Austin, Stats and Data Science | 4.0 GPA</p>
                 <p>love data, politics, and the New York Giants</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View Projects</a>
                     <a href="#contact" class="btn btn-secondary">Contact Me</a>
                 </div>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-envelope"></i></a>
+                    <a href="https://linkedin.com/in/yashguptayg" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/ygnewyork" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="mailto:ygnewyork@utexas.edu"><i class="far fa-envelope"></i></a>
                 </div>
             </div>
         </div>
