--- a/index.html
+++ b/index.html
@@ -164,6 +164,28 @@
         </div>
     </section>
 
+    <!-- Projects Section -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2 class="section-title">Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-content">
+                        <h3>NFL Big Data Bowl 2025</h3>
+                        <p class="project-type">Kaggle Competition | Fall 2024</p>
+                        <p>Built a robust NFL play analysis tool using R, ggplot2, and tidyverse to uncover actionable insights. Customized interactive visualizations to display coverage distributions and average yards gained by formations. Applied advanced statistical methods and data structures to process and analyze large-scale NFL datasets.</p>
+                        <div class="project-tags">
+                            <span class="project-tag">R</span>
+                            <span class="project-tag">ggplot2</span>
+                            <span class="project-tag">tidyverse</span>
+                            <span class="project-tag">Data Analysis</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Gallery Section -->
     <section id="gallery" class="gallery">
         <div class="container animate-on-scroll">
