--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
-        <div class="container animate-on-scroll">
+        <div class="container">
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
                 <div class="contact-info">
@@ -270,51 +270,53 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>youremail@example.com</p>
+                            <p><a href="mailto:ygnewyork@utexas.edu">ygnewyork@utexas.edu</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Phone</h3>
-                            <p>+1 (123) 456-7890</p>
+                            <p><a href="tel:+15165874738">(516) 587-4738</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="fab fa-linkedin"></i>
                         <div>
-                            <h3>Location</h3>
-                            <p>Austin, Texas</p>
+                            <h3>LinkedIn</h3>
+                            <p><a href="https://linkedin.com/in/yashguptayg" target="_blank">linkedin.com/in/yashguptayg</a></p>
                         </div>
                     </div>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fas fa-envelope"></i></a>
+                    <div class="contact-item">
+                        <i class="fab fa-github"></i>
+                        <div>
+                            <h3>GitHub</h3>
+                            <p><a href="https://github.com/ygnewyork" target="_blank">github.com/ygnewyork</a></p>
+                        </div>
                     </div>
                 </div>
-
-                <form id="contactForm" class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
+                <div class="contact-form">
+                    <form id="contactForm">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <input type="text" id="subject" name="subject" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" rows="5" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
                     <div id="formStatus" class="form-status"></div>
-                </form>
+                </div>
             </div>
         </div>
     </section>
@@ -323,12 +325,11 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2025 Yash Gupta. All Rights Reserved.</p>
+                <p>&copy; 2025 Yash Gupta. All rights reserved.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-envelope"></i></a>
+                    <a href="https://linkedin.com/in/yashguptayg" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/ygnewyork" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="mailto:ygnewyork@utexas.edu"><i class="far fa-envelope"></i></a>
                 </div>
             </div>
         </div>
