--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <!-- Experience Section -->
     <section id="experience" class="experience">
-        <div class="container">
+        <div class="container animate-on-scroll">
             <h2 class="section-title">Professional Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
@@ -166,7 +166,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
-        <div class="container">
+        <div class="container animate-on-scroll">
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
@@ -262,7 +262,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
-        <div class="container">
+        <div class="container animate-on-scroll">
             <h2 class="section-title">Get In Touch</h2>
             <div class="contact-content">
                 <div class="contact-info">
